==> apache/nuttx/arch/xtensa/src/esp32s3/esp32s3_qspi.c <==
#include <nuttx/config.h>
#include <assert.h>
#include <debug.h>
#include <sys/param.h>
#include <sys/types.h>
#include <inttypes.h>
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#include <time.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <nuttx/clock.h>
#include <nuttx/mutex.h>
#include <nuttx/kmalloc.h>
#include <nuttx/spi/qspi.h>
#include <arch/board/board.h>
#include "xtensa.h"
#include "hardware/esp32s3_gpio_sigmap.h"
#include "hardware/esp32s3_pinmap.h"
#include "hardware/esp32s3_spi.h"
#include "hardware/esp32s3_soc.h"
#include "hardware/esp32s3_system.h"
#include "esp32s3_irq.h"
#include "esp32s3_gpio.h"
#include "esp32s3_qspi.h"
#include "esp32s3_dma.h"
#define QSPI_DMA_BUFSIZE CONFIG_ESP32S3_SPI_DMA_BUFSIZE
#    define QSPI_DMA_DESC_NUM (QSPI_DMA_BUFSIZE / ESP32S3_DMA_BUFLEN_MAX + 1)
#    define QSPI_DMA_DESC_NUM (QSPI_DMA_BUFSIZE / ESP32S3_DMA_BUFLEN_MAX)
#  define QSPI_DMA_RESET_MASK (SPI_DMA_AFIFO_RST_M | SPI_RX_AFIFO_RST_M)
#define QSPI_DEFAULT_FREQ   (400000)
#define QSPI_DEFAULT_WIDTH  (8)
#define QSPI_DEFAULT_MODE   (QSPIDEV_MODE0)
#define QSPI_CMD_BUFSIZE    (64)
#  define QSPI_IS_CS_IOMUX    (CONFIG_ESP32S3_SPI2_CSPIN == SPI2_IOMUX_CSPIN)
#  define QSPI_IS_CLK_IOMUX   (CONFIG_ESP32S3_SPI2_CLKPIN == SPI2_IOMUX_CLKPIN)
#  define QSPI_IS_MOSI_IOMUX  (CONFIG_ESP32S3_SPI2_MOSIPIN == SPI2_IOMUX_MOSIPIN)
#  define QSPI_IS_MISO_IOMUX  (CONFIG_ESP32S3_SPI2_MISOPIN == SPI2_IOMUX_MISOPIN)

static int esp32s3_qspi_lock(struct qspi_dev_s *dev, bool lock)
{
  int ret;
  struct esp32s3_qspi_priv_s *priv = (struct esp32s3_qspi_priv_s *)dev;

  if (lock)
    {
      ret = nxmutex_lock(&priv->lock);
    }
  else
    {
      ret = nxmutex_unlock(&priv->lock);
    }

  return ret;
}

static uint32_t esp32s3_qspi_setfrequency(struct qspi_dev_s *dev,
                                          uint32_t frequency)
{
  uint32_t regval;
  struct esp32s3_qspi_priv_s *priv = (struct esp32s3_qspi_priv_s *)dev;
  const uint32_t duty_cycle = 128;

  if (priv->frequency == frequency)
    {
      /* Requested frequency is the same as the current frequency. */

      return priv->actual;
    }

  /* In HW, n, h and l fields range from 1 to 64, pre ranges from 1 to 8K.
   * The value written to register is one lower than the used value.
   */

  if (frequency > ((APB_CLK_FREQ / 4) * 3))
    {
      /* Using APB frequency directly will give us the best result here. */

      regval = SPI_CLK_EQU_SYSCLK_M;
      priv->actual = APB_CLK_FREQ;
    }
  else
    {
      /* For best duty cycle resolution, we want n to be as close to 32 as
       * possible, but we also need a pre/n combo that gets us as close as
       * possible to the intended frequency. To do this, we bruteforce n and
       * calculate the best pre to go along with that. If there's a choice
       * between pre/n combos that give the same result, use the one with the
       * higher n.
       */

      int32_t pre;
      int32_t n;
      int32_t h;
      int32_t l;
      int32_t bestn = -1;
      int32_t bestpre = -1;
      int32_t besterr = 0;
      int32_t errval;

      /* Start at n = 2. We need to be able to set h/l so we have at least
       * one high and one low pulse.
       */

      for (n = 2; n <= 64; n++)
        {
          /* Effectively, this does:
           *   pre = round((APB_CLK_FREQ / n) / frequency)
           */

          pre = ((APB_CLK_FREQ / n) + (frequency / 2)) / frequency;

          if (pre <= 0)
            {
              pre = 1;
            }

          if (pre > 16)
            {
              pre = 16;
            }

          errval = abs(APB_CLK_FREQ / (pre * n) - frequency);
          if (bestn == -1 || errval <= besterr)
            {
              besterr = errval;
              bestn = n;
              bestpre = pre;
            }
        }

      n = bestn;
      pre = bestpre;
      l = n;

      /* Effectively, this does:
       *   h = round((duty_cycle * n) / 256)
       */

      h = (duty_cycle * n + 127) / 256;
      if (h <= 0)
        {
          h = 1;
        }

      regval = ((l - 1) << SPI_CLKCNT_L_S) |
               ((h - 1) << SPI_CLKCNT_H_S) |
               ((n - 1) << SPI_CLKCNT_N_S) |
               ((pre - 1) << SPI_CLKDIV_PRE_S);

      priv->actual = APB_CLK_FREQ / (n * pre);
    }

  priv->frequency = frequency;

  putreg32(regval, SPI_CLOCK_REG(priv->config->id));

  spiinfo("frequency=%" PRIu32 ", actual=%" PRIu32 "\n",
          priv->frequency, priv->actual);

  return priv->actual;
}

static void esp32s3_qspi_setmode(struct qspi_dev_s *dev,
                                 enum qspi_mode_e mode)
{
  uint32_t regval;
  struct esp32s3_qspi_priv_s *priv = (struct esp32s3_qspi_priv_s *)dev;
  uint8_t id = priv->config->id;

  spiinfo("mode=%d\n", mode);

  /* Has the mode changed? */

  if (mode != priv->mode)
    {
      uint32_t ck_idle_edge;
      uint32_t ck_out_edge;

      switch (mode)
        {
          case QSPIDEV_MODE0: /* CPOL=0; CPHA=0 */
            ck_idle_edge = 0;
            ck_out_edge = 0;
            break;

          case QSPIDEV_MODE1: /* CPOL=0; CPHA=1 */
            ck_idle_edge = 0;
            ck_out_edge = 1;
            break;

          case QSPIDEV_MODE2: /* CPOL=1; CPHA=0 */
            ck_idle_edge = 1;
            ck_out_edge = 1;
            break;

          case QSPIDEV_MODE3: /* CPOL=1; CPHA=1 */
            ck_idle_edge = 1;
            ck_out_edge = 0;
            break;

          default:
            spierr("Invalid mode: %d\n", mode);
            DEBUGPANIC();
            return;
        }

      regval  = getreg32(SPI_MISC_REG(id));
      regval &= SPI_CK_IDLE_EDGE_M;
      regval |= ck_idle_edge << SPI_CK_IDLE_EDGE_S;
      putreg32(regval, SPI_MISC_REG(id));

      regval  = getreg32(SPI_USER_REG(id));
      regval &= SPI_CK_OUT_EDGE_M;
      regval |= ck_out_edge << SPI_CK_OUT_EDGE_S;
      putreg32(regval, SPI_USER_REG(id));

      priv->mode = mode;
    }
}

static void esp32s3_qspi_setbits(struct qspi_dev_s *dev, int nbits)
{
  struct esp32s3_qspi_priv_s *priv = (struct esp32s3_qspi_priv_s *)dev;

  spiinfo("nbits=%d\n", nbits);

  priv->nbits = nbits;
}

static int esp32s3_qspi_command(struct qspi_dev_s *dev,
                                struct qspi_cmdinfo_s *cmdinfo)
{
  uint32_t regval;
  uint8_t *data;
  struct esp32s3_qspi_priv_s *priv = (struct esp32s3_qspi_priv_s *)dev;
  uint8_t id = priv->config->id;
  uint32_t user1_reg = getreg32(SPI_USER1_REG(id));
  uint32_t user_reg = getreg32(SPI_USER_REG(id));

  if (QSPICMD_ISWRITE(cmdinfo->flags) || QSPICMD_ISREAD(cmdinfo->flags))
    {
      if (cmdinfo->buflen > QSPI_CMD_BUFSIZE)
        {
          return -EINVAL;
        }
      else
        {
          putreg32(cmdinfo->buflen * 8 - 1, SPI_MS_DLEN_REG(id));
        }
    }

  /* Initiliaze QSPI user register */

  user_reg &= ~(SPI_USR_ADDR_M |
                SPI_USR_MOSI_M |
                SPI_USR_MISO_M |
                SPI_USR_DUMMY_M |
                SPI_FWRITE_DUAL_M |
                SPI_FWRITE_OCT_M |
                SPI_FWRITE_QUAD_M);
  user_reg |= SPI_USR_COMMAND_M;

  /* Set command bits and value, and command is always needed */

  regval  = getreg32(SPI_USER2_REG(id));
  regval &= ~(SPI_USR_COMMAND_BITLEN_M |
              SPI_USR_COMMAND_VALUE_M |
              SPI_MST_REMPTY_ERR_END_EN_M);
  regval |= ((QSPI_CMD_BITS(cmdinfo->cmd) - 1) << SPI_USR_COMMAND_BITLEN_S) |
            (cmdinfo->cmd << SPI_USR_COMMAND_VALUE_S);
  putreg32(regval, SPI_USER2_REG(id));

  /* Set address bits and value */

  if (QSPICMD_ISADDRESS(cmdinfo->flags))
    {
      user1_reg &= ~SPI_USR_ADDR_BITLEN_M;
      user1_reg |= (cmdinfo->addrlen * 8 - 1) << SPI_USR_ADDR_BITLEN_S;

      user_reg |= SPI_USR_ADDR_M;

      putreg32(cmdinfo->addr, SPI_ADDR_REG(id));
    }

  /* Set dummy */

  if (priv->dummies)
    {
      user1_reg &= ~SPI_USR_DUMMY_CYCLELEN_M;
      user1_reg |= (priv->dummies - 1) << SPI_USR_DUMMY_CYCLELEN_S;

      user_reg |= SPI_USR_DUMMY_M;
    }

  /* Set TX data */

  if (QSPICMD_ISWRITE(cmdinfo->flags))
    {
      data = (uint8_t *)cmdinfo->buffer;

      for (int i = 0; i < cmdinfo->buflen; i += 4)
        {
          memcpy(&regval, data + i, 4);
          putreg32(regval, SPI_W0_REG(id) + i);
        }

      user_reg |= SPI_USR_MOSI_M;

      if (priv->data_lines == 2)
        {
          user_reg |= SPI_FWRITE_DUAL_M;
        }
      else if (priv->data_lines == 4)
        {
          user_reg |= SPI_FWRITE_QUAD_M;
        }
    }
  else if (QSPICMD_ISREAD(cmdinfo->flags))
    {
      user_reg |= SPI_USR_MISO_M;
    }

  putreg32(user_reg,  SPI_USER_REG(id));
  putreg32(user1_reg, SPI_USER1_REG(id));

  /* Set command and address I/O mode */

  regval  = getreg32(SPI_CTRL_REG(id));
  regval &= ~(SPI_FCMD_OCT_M | SPI_FADDR_OCT_M | SPI_FREAD_OCT_M |
              SPI_FCMD_DUAL_M | SPI_FADDR_DUAL_M | SPI_FREAD_DUAL_M |
              SPI_FCMD_QUAD_M | SPI_FADDR_QUAD_M | SPI_FREAD_QUAD_M);
  if (QSPICMD_ISIDUAL(cmdinfo->flags))
    {
      regval |= SPI_FCMD_DUAL_M;
    }
  else if (QSPICMD_ISIQUAD(cmdinfo->flags))
    {
      regval |= SPI_FCMD_QUAD_M;
    }

  if (priv->addr_lines == 2)
    {
      regval |= SPI_FADDR_DUAL_M;
    }
  else if (priv->addr_lines == 4)
    {
      regval |= SPI_FADDR_QUAD_M;
    }

  if (QSPICMD_ISREAD(cmdinfo->flags))
    {
      if (priv->data_lines == 2)
        {
          regval |= SPI_FREAD_DUAL_M;
        }
      else if (priv->data_lines == 4)
        {
          regval |= SPI_FREAD_QUAD_M;
        }
    }

  putreg32(regval, SPI_CTRL_REG(id));

  /* Update QSPI master registers value */

  regval = getreg32(SPI_CMD_REG(id));
  regval |= SPI_UPDATE_M;
  putreg32(regval, SPI_CMD_REG(id));

  while ((getreg32(SPI_CMD_REG(id)) & SPI_UPDATE_M) != 0)
    {
      ;
    }

  /* Start transmision */

  regval = getreg32(SPI_CMD_REG(id));
  regval |= SPI_USR_M;
  putreg32(regval, SPI_CMD_REG(id));

  /* Wait until transmission is done */

  while ((getreg32(SPI_CMD_REG(id)) & SPI_USR_M) != 0)
    {
      ;
    }

  if (QSPICMD_ISREAD(cmdinfo->flags))
    {
      data = (uint8_t *)cmdinfo->buffer;

      for (int i = 0; i < cmdinfo->buflen; i += 4)
        {
          regval = getreg32(SPI_W0_REG(id) + i);
          memcpy(data + i, &regval, MIN(4, cmdinfo->buflen - i));
        }
    }

  return OK;
}

static int esp32s3_qspi_memory(struct qspi_dev_s *dev,
                               struct qspi_meminfo_s *meminfo)
{
#ifdef CONFIG_ESP32S3_SPI_DMA
  uint32_t regval;
  struct esp32s3_qspi_priv_s *priv = (struct esp32s3_qspi_priv_s *)dev;
  uint8_t id = priv->config->id;
  uint32_t user1_reg = getreg32(SPI_USER1_REG(id));
  uint32_t user_reg = getreg32(SPI_USER_REG(id));

  if (QSPIMEM_ISWRITE(meminfo->flags) || QSPIMEM_ISREAD(meminfo->flags))
    {
      if (meminfo->buflen > QSPI_DMA_BUFSIZE)
        {
          return -EINVAL;
        }
      else
        {
          putreg32(meminfo->buflen * 8 - 1, SPI_MS_DLEN_REG(id));
        }
    }

  /* Reset SPI DMA FIFO */

  regval  = getreg32(SPI_DMA_CONF_REG(id));
  regval |= QSPI_DMA_RESET_MASK;
  putreg32(regval, SPI_DMA_CONF_REG(id));

  regval &= ~QSPI_DMA_RESET_MASK;
  putreg32(regval, SPI_DMA_CONF_REG(id));

  /* Initiliaze QSPI user register */

  user_reg &= ~(SPI_USR_MOSI_M |
                SPI_USR_MISO_M |
                SPI_USR_DUMMY_M |
                SPI_FWRITE_DUAL_M |
                SPI_FWRITE_OCT_M |
                SPI_FWRITE_QUAD_M);
  user_reg |= SPI_USR_COMMAND_M | SPI_USR_ADDR_M;

  /* Set command bits and value, and command is always needed */

  regval  = getreg32(SPI_USER2_REG(id));
  regval &= ~(SPI_USR_COMMAND_BITLEN_M |
              SPI_USR_COMMAND_VALUE_M |
              SPI_MST_REMPTY_ERR_END_EN_M);
  regval |= ((QSPI_CMD_BITS(meminfo->cmd) - 1) << SPI_USR_COMMAND_BITLEN_S) |
            (meminfo->cmd << SPI_USR_COMMAND_VALUE_S);
  putreg32(regval, SPI_USER2_REG(id));

  /* Set address bits and value */

  user1_reg &= ~SPI_USR_ADDR_BITLEN_M;
  user1_reg |= (meminfo->addrlen * 8 - 1) << SPI_USR_ADDR_BITLEN_S;

  putreg32(meminfo->addr, SPI_ADDR_REG(id));

  /* Set dummy */

  if (meminfo->dummies)
    {
      user1_reg &= ~SPI_USR_DUMMY_CYCLELEN_M;
      user1_reg |= (meminfo->dummies - 1) << SPI_USR_DUMMY_CYCLELEN_S;

      user_reg |= SPI_USR_DUMMY_M;
    }

  /* Enable SPI DMA TX */

  if (QSPIMEM_ISWRITE(meminfo->flags))
    {
      regval  = getreg32(SPI_DMA_CONF_REG(id));
      regval |= SPI_DMA_TX_ENA_M;
      putreg32(regval, SPI_DMA_CONF_REG(id));

      user_reg |= SPI_USR_MOSI_M;

      if (priv->data_lines == 2)
        {
          user_reg |= SPI_FWRITE_DUAL_M;
        }
      else if (priv->data_lines == 4)
        {
          user_reg |= SPI_FWRITE_QUAD_M;
        }

      esp32s3_dma_setup(priv->dma_channel,
                        true,
                        priv->dma_desc,
                        QSPI_DMA_DESC_NUM,
                        (uint8_t *)meminfo->buffer,
                        meminfo->buflen);
      esp32s3_dma_enable(priv->dma_channel, true);
    }
  else if (QSPIMEM_ISREAD(meminfo->flags))
    {
      regval  = getreg32(SPI_DMA_CONF_REG(id));
      regval |= SPI_DMA_RX_ENA_M;
      putreg32(regval, SPI_DMA_CONF_REG(id));

      user_reg |= SPI_USR_MISO_M;

      esp32s3_dma_setup(priv->dma_channel,
                        false,
                        priv->dma_desc,
                        QSPI_DMA_DESC_NUM,
                        (uint8_t *)meminfo->buffer,
                        meminfo->buflen);
      esp32s3_dma_enable(priv->dma_channel, false);
    }

  putreg32(user_reg,  SPI_USER_REG(id));
  putreg32(user1_reg, SPI_USER1_REG(id));

  /* Set command and address I/O mode */

  regval  = getreg32(SPI_CTRL_REG(id));
  regval &= ~(SPI_FCMD_OCT_M | SPI_FADDR_OCT_M | SPI_FREAD_OCT_M |
              SPI_FCMD_DUAL_M | SPI_FADDR_DUAL_M | SPI_FREAD_DUAL_M |
              SPI_FCMD_QUAD_M | SPI_FADDR_QUAD_M | SPI_FREAD_QUAD_M);
  if (QSPIMEM_ISIDUAL(meminfo->flags))
    {
      regval |= SPI_FCMD_DUAL_M;
    }
  else if (QSPIMEM_ISIQUAD(meminfo->flags))
    {
      regval |= SPI_FCMD_QUAD_M;
    }

  if (priv->addr_lines == 2)
    {
      regval |= SPI_FADDR_DUAL_M;
    }
  else if (priv->addr_lines == 4)
    {
      regval |= SPI_FADDR_QUAD_M;
    }

  if (QSPIMEM_ISREAD(meminfo->flags))
    {
      if (priv->data_lines == 2)
        {
          regval |= SPI_FREAD_DUAL_M;
        }
      else if (priv->data_lines == 4)
        {
          regval |= SPI_FREAD_QUAD_M;
        }
    }

  putreg32(regval, SPI_CTRL_REG(id));

  /* Set interrupt */

  putreg32(SPI_TRANS_DONE_INT_CLR_M, SPI_DMA_INT_CLR_REG(id));
  putreg32(SPI_TRANS_DONE_INT_ENA_M, SPI_DMA_INT_ENA_REG(id));

  /* Update QSPI master registers value */

  regval = getreg32(SPI_CMD_REG(id));
  regval |= SPI_UPDATE_M;
  putreg32(regval, SPI_CMD_REG(id));

  while ((getreg32(SPI_CMD_REG(id)) & SPI_UPDATE_M) != 0)
    {
      ;
    }

  /* Start transmision */

  regval = getreg32(SPI_CMD_REG(id));
  regval |= SPI_USR_M;
  putreg32(regval, SPI_CMD_REG(id));

  /* Wait for transmision done */

  esp32s3_qspi_wait_sem(priv);

  /* Reset interrupt */

  putreg32(0, SPI_DMA_INT_ENA_REG(id));

  return 0;
#else
  return -1;
#endif
}

static int esp32s3_qspi_interrupt(int irq, void *context, void *arg)
{
  struct esp32s3_qspi_priv_s *priv = (struct esp32s3_qspi_priv_s *)arg;

  /* Write 1 to clear interrupt bit */

  putreg32(SPI_TRANS_DONE_INT_CLR_M, SPI_DMA_INT_CLR_REG(priv->config->id));

  nxsem_post(&priv->sem_isr);

  return 0;
}
